--- a/PlutoWallet/View/SetupPasswordPage.xaml
+++ b/PlutoWallet/View/SetupPasswordPage.xaml
@@ -42,17 +42,77 @@
                                         </Label.FormattedText>
 
                                     </Label>
-                                    <Entry HeightRequest="40"
-                                           Placeholder="Password"
-                                            Text="{Binding Password}"
-                                            Margin="0, 10, 0, 10"
-                                            Keyboard="Plain"
-                                            IsPassword="True"
-                                            x:Name="passwordEntry" />
+                                    <Grid HeightRequest="40"
+                                          x:Name="grid"
+                                          Margin="0, 10, 0, 0"
+                                          >
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="40" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <AbsoluteLayout x:Name="layout"/>
+                                        <Entry HeightRequest="40"
+                                               HorizontalOptions="Start"
+                                               Placeholder="Password"
+                                                Text="{Binding Password}"
+                                                Margin="0, 0, 50, 0"
+                                                Keyboard="Plain"
+                                                IsPassword="True"
+                                                x:Name="passwordEntry"
+                                               Grid.Column="0"
+                                               WidthRequest="{Binding Source={x:Reference layout}, Path=Width}"
+                                               />
+
+                                        <Image AbsoluteLayout.LayoutBounds="1, .5, 20, 20"
+                                               AbsoluteLayout.LayoutFlags="PositionProportional"
+                                               Margin="10"
+                                               Grid.Column="1"
+                                               ZIndex="1000"
+                                               x:Name="eyeball"
+                                               >
+
+                                            <Image.Source>
+                                                <FontImageSource Color="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                                                                 Glyph="&#xf06e;"
+                                                                 FontFamily="FontAwesome"
+                                                                 Size="20" />
+                                            </Image.Source>
+
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="OnEyeballClicked" />
+
+                                            </Image.GestureRecognizers>
+                                        </Image>
+                                        <Image AbsoluteLayout.LayoutBounds="1, .5, 20, 20"
+                                               AbsoluteLayout.LayoutFlags="PositionProportional"
+                                               Margin="10"
+                                               Grid.Column="1"
+                                               ZIndex="1000"
+                                               x:Name="eyeballSlash"
+                                               IsVisible="false"
+                                               >
+
+                                            <Image.Source>
+                                                <FontImageSource Color="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                                                                 Glyph="&#xf070;"
+                                                                 FontFamily="FontAwesome"
+                                                                 Size="20" />
+                                            </Image.Source>
+
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="OnEyeballClicked" />
+
+                                            </Image.GestureRecognizers>
+                                        </Image>
+
+
+                                    </Grid>
 
                                     <Label VerticalTextAlignment="Start"
                                            HorizontalTextAlignment="Start"
                                            TextColor="#888888"
+                                           Margin="5"
                                            Text="Used just for this app instance."/>
                                 </VerticalStackLayout>
                 
