--- a/PlutoWallet/Components/PredefinedLayouts/HydrationOmnipoolLayoutItem.xaml
+++ b/PlutoWallet/Components/PredefinedLayouts/HydrationOmnipoolLayoutItem.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
-             x:Class="PlutoWallet.Components.PredefinedLayouts.HydraDXOmnipoolLayoutItem"
+             x:Class="PlutoWallet.Components.PredefinedLayouts.HydrationOmnipoolLayoutItem"
             HeightRequest="60">
     <card:Card Color="#031538"
                CardPadding="0">
@@ -19,7 +19,7 @@
                             VerticalTextAlignment="End"
                             TextColor="#f653a2"
                             FontFamily="FontOver"
-                            Text="HydraDX Omnipool"/>
+                            Text="Hydration Omnipool"/>
 
                         <Image Source="infowhite.png" 
                                    VerticalOptions="Center"
