--- a/PlutoWallet/Components/Events/EventItemView.xaml
+++ b/PlutoWallet/Components/Events/EventItemView.xaml
@@ -45,11 +45,9 @@
                    Grid.Column="3"/>
             </Grid>
             <ScrollView Orientation="Horizontal" HorizontalScrollBarVisibility="Never" >
-                <VerticalStackLayout
-                                        Margin="0, 5, 0, 5"
+                <VerticalStackLayout Margin="0, 5, 0, 5"
                                         x:Name="eventParametersStackLayout"
                                          Spacing="-3">
-
                 </VerticalStackLayout>
             </ScrollView>
         </VerticalStackLayout>
