--- a/PlutoWallet/Components/TransferView/TransferView.xaml
+++ b/PlutoWallet/Components/TransferView/TransferView.xaml
@@ -2,7 +2,8 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
-             xmlns:assetselect="clr-namespace:PlutoWallet.Components.AssetSelect" xmlns:identity="clr-namespace:PlutoWallet.Components.Identity"
+             xmlns:assetselect="clr-namespace:PlutoWallet.Components.AssetSelect"
+             xmlns:identity="clr-namespace:PlutoWallet.Components.Identity"
              x:Class="PlutoWallet.Components.TransferView.TransferView"
              IsVisible="{Binding IsVisible}"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
