Update Extrinsic Status view close button

--- a/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
+++ b/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
@@ -39,8 +39,7 @@
                 </VerticalStackLayout>
 
                 <Image Source="{AppThemeBinding Light=closeblack.png, Dark=closewhite.png}"
-                       x:Name="calamarButton"
-                       IsVisible="false"
+                       x:Name="closeButton"
                        Aspect="AspectFit"
                        AbsoluteLayout.LayoutBounds="1, 0.5, 50, 50"
                        Margin="10"
