--- a/PlutoWallet/Components/Settings/SettingsPage.xaml
+++ b/PlutoWallet/Components/Settings/SettingsPage.xaml
@@ -1,26 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:settings="clr-namespace:PlutoWallet.Components.Settings"
+             x:Class="PlutoWallet.Components.Settings.SettingsPage"
              xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
-             xmlns:settings="clr-namespace:PlutoWallet.Components.Settings" xmlns:confirmtransaction="clr-namespace:PlutoWallet.Components.ConfirmTransaction"
-             x:Class="PlutoWallet.View.SettingsPage"
+             xmlns:confirmtransaction="clr-namespace:PlutoWallet.Components.ConfirmTransaction"
              Title="Settings"
              BackgroundColor="Black">
     <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-        
+
         <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-               Source="{AppThemeBinding Light=whitebackground.png, Dark=darkbackground2.png}"
-               Opacity="{AppThemeBinding Light=0.96}"
-               Aspect="AspectFill"/>
+           Source="{AppThemeBinding Light=whitebackground.png, Dark=darkbackground2.png}"
+           Opacity="{AppThemeBinding Light=0.96}"
+           Aspect="AspectFill"/>
 
         <ScrollView Orientation="Vertical"
-                    x:Name="scrollView"
-                    AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                    AbsoluteLayout.LayoutFlags="All"
-                    Padding="0, 55, 0, 0">
+                x:Name="scrollView"
+                AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                AbsoluteLayout.LayoutFlags="All"
+                Padding="0, 55, 0, 0">
             <VerticalStackLayout HorizontalOptions="Center"
-                                 Padding="20, 10, 20, 100"
-                                 Spacing="15">
+                             Padding="20, 10, 20, 100"
+                             Spacing="15">
                 <settings:GenericButton Title="Predefined layouts">
                     <settings:GenericButton.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnPredefinedLayoutsClicked" />
@@ -37,6 +38,14 @@
 
                 </settings:GenericButton>
 
+                <settings:GenericButton Title="Developer settings">
+                    <settings:GenericButton.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnDeveloperSettingsClicked" />
+
+                    </settings:GenericButton.GestureRecognizers>
+
+                </settings:GenericButton>
+                
                 <settings:GenericButton Title="Log out (Delete private key)">
                     <settings:GenericButton.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnLogOutClicked" />
@@ -45,13 +54,12 @@
 
                 </settings:GenericButton>
             </VerticalStackLayout>
-            
+
         </ScrollView>
 
         <navigationbar:TopNavigationBar Title="Settings"
-                                        x:Name="topNavigationBar" />
+                                    x:Name="topNavigationBar" />
 
         <confirmtransaction:ConfirmTransactionView />
-
     </AbsoluteLayout>
 </ContentPage>
