--- a/PlutoWallet/View/SetupPasswordPage.xaml
+++ b/PlutoWallet/View/SetupPasswordPage.xaml
@@ -62,6 +62,9 @@
                                                 x:Name="passwordEntry"
                                                Grid.Column="0"
                                                WidthRequest="{Binding Source={x:Reference layout}, Path=Width}"
+                                               IsSpellCheckEnabled="false"
+                                               IsTextPredictionEnabled="false"
+                                               Completed="OnEnterPressedAsync"
                                                />
 
                                         <Image AbsoluteLayout.LayoutBounds="1, .5, 20, 20"
