--- a/PlutoWallet/Components/AssetSelect/AssetSelectView.xaml
+++ b/PlutoWallet/Components/AssetSelect/AssetSelectView.xaml
@@ -7,7 +7,7 @@
              AbsoluteLayout.LayoutBounds=".5, .5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
              IsVisible="{Binding IsVisible}">
-    <card:BottomPopupCard>
+    <card:BottomPopupCard Title="Select Asset">
         <card:BottomPopupCard.View>
 
             
