--- a/PlutoWallet/View/BasePage.xaml
+++ b/PlutoWallet/View/BasePage.xaml
@@ -58,10 +58,7 @@
 
         <addressview:AddressQrCodeView />
 
-        <transferview:TransferView x:Name="transferView" />
-
-        <connectionrequestview:ConnectionRequestView
-                                   x:Name="connectionRequestView" />
+        <connectionrequestview:ConnectionRequestView />
 
         <vault:VaultSignView />
 
@@ -76,6 +73,8 @@
         <messagepopup:MessagePopupView />
 
         <navigationbar:NavigationBarView />
+
+        <transferview:TransferView />
 
         <assetselect:AssetSelectView />
 
