--- a/PlutoWallet/View/BasePage.xaml
+++ b/PlutoWallet/View/BasePage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.View.BasePage"
              Title="Base page"
+             xmlns:txanalyzer="clr-namespace:PlutoWallet.Components.TransactionAnalyzer"
              xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
              xmlns:transferview="clr-namespace:PlutoWallet.Components.TransferView"
              xmlns:connectionrequestview="clr-namespace:PlutoWallet.Components.ConnectionRequestView"
@@ -82,5 +83,6 @@
 
         <changelayoutrequest:ChangeLayoutRequestView />
 
-    </AbsoluteLayout>
+        <txanalyzer:TransactionAnalyzerConfirmationView />
+</AbsoluteLayout>
 </ContentPage>
