--- a/PlutoWallet/Components/TransactionAnalyzer/DAppNetworkView.xaml
+++ b/PlutoWallet/Components/TransactionAnalyzer/DAppNetworkView.xaml
@@ -16,22 +16,22 @@
                                 x:Name="icon"/>
                     </Frame>
                     
-                    <VerticalStackLayout AbsoluteLayout.LayoutBounds="70, 0, AutoSize, AutoSize" Spacing="0">
-                        <Label 
-                                x:Name="nameLabel"
+                    <HorizontalStackLayout AbsoluteLayout.LayoutBounds="70, 0, 70, 70" Spacing="10">
+                        <Label  x:Name="nameLabel"
                                 FontAttributes="Bold"
                                 HorizontalOptions="Start"
-                                HeightRequest="25"
-                            Margin="0, 5, 0, -5"
-                                VerticalTextAlignment="End"/>
+                                VerticalOptions="Center"
+                                VerticalTextAlignment="Center" />
                         <network:NetworkBubbleView EndpointConnectionStatus="None"
                                                    ShowName="True"
                                                    x:Name="networkBubble"
                                                    Scale="0.6"
                                                    AnchorX="0"
+                                                   AnchorY="0.5"
                                                    HorizontalOptions="Start"
+                                                   VerticalOptions="Center"
                                                    />
-                    </VerticalStackLayout>
+                    </HorizontalStackLayout>
                 </AbsoluteLayout>
 
             </AbsoluteLayout>
